// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sync application is gated by the workspace completed upgrade version rejects sync when the workspace has not completed the required upgrade version 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "WORKSPACE_VERSION_INCOMPATIBLE",
    "userFriendlyMessage": "This app requires a newer version than this workspace has finished upgrading to. Please try again once the workspace upgrade completes.",
  },
  "message": "App requires Twenty server >=<version> but this workspace has only completed the upgrade to <version>.",
  "name": "UserInputError",
}
`;

exports[`Sync application is gated by the workspace completed upgrade version rejects sync when the workspace upgrade cursor cannot be interpreted 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_WORKSPACE_VERSION",
    "userFriendlyMessage": "This workspace's upgrade state could not be determined. Please try again once the workspace has finished upgrading.",
  },
  "message": "Cannot determine the completed upgrade version for workspace 20202020-1c25-4d02-bf25-6aeccf7ea419: no interpretable upgrade cursor found.",
  "name": "UserInputError",
}
`;
